# VehicleDetection

./: CMakeLists.txt  README.md  VehicleDetector.pro  appendpath.sh  build.sh  envsetup.sh  prepare.sh  vehicledetector.cpp  vehicledetector.h  vehicledetector_global.h
darknet/: Makefile  yolov4.cfg
src/: vehicledetector.cpp  vehicledetector.h
